--- a/style.css
+++ b/style.css
@@ -20,41 +20,59 @@ h1 {
     color : rgb(210, 201, 201);
     text-align: center;
     font-size: 50px;
-    margin-top : 50px;
+    margin-top : 20px;
 }
 p {
     color : white;
     font-size : 25px;
 }
+
 #resultat {
     height : 50px;
     display: flex;
     justify-content: center;
     padding-top : 10px;
 }
+legend {
+    color : white;
+}
+label {
+    color : white;
+    cursor : pointer;
+    /* line-height : 2; */
+    display:inline-block;
+    font-size : 20px;
+    width:30px;
+    height:30px;
+    margin:1px 10px 0 0;
+    vertical-align:middle;
+}
 
 .accueil {
     background-color : rgb(55, 55, 55);
     width : 90%;
+    height: 100px;
     margin-left : 50px;
     display: flex;
     justify-content: space-around;
     align-items: center; 
-    
-
 }
 
 button {
     height : 50px;
-    width:200px;
+    width : 100px;
     text-align: center;
     border-radius : 15px;
     margin-left : 50px;
 }
 
+.stop {
+    visibility : hidden;
+}
+
 .page {
     max-width: 1200px;
-    width : 90%;
+    width : 900px;
     border : solid 1px black;
     background-color: rgb(45, 45, 45);
     margin : 20px auto ;
@@ -72,19 +90,20 @@ button {
     margin : 10px auto ;
     object-fit: cover; 
     border-radius: 8%;
-
 }
 
 .card-container {
     position: relative;
-    /* overflow: hidden; */
     flex-shrink: 0; 
     min-width : 160px; 
     min-height : 240px; 
+    width : calc(25% - 50px);
     margin-top : 5px; 
     margin-bottom : 25px; 
     margin-right : 30px;
     perspective : 1000px; 
+    
+    
 }
 
 .card {
@@ -92,26 +111,13 @@ button {
     height: 100%;
     width: 100%;
     transition: all 0.3s ease;
-    transform-style: preserve-3d;
+    /* transform-style: preserve-3d; */
     pointer-events: auto;
 }
 
 .card-container:hover .card {
     scale : 1.2;
 }
-
-/*
-.card-figee-win {
-    position: relative;
-    height: 100%;
-    width: 100%;
-    scale : 0.8;
-    border : solid 3px green; 
-    opacity : 0.7;
-    transition: all 1s ease;  
-    pointer-events : none;
-}*/
-
 
 .card {
     position: relative;
