--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@
       padding: 0;
     }		
 
-
 body {
     background-color: rgb(50, 50, 50);
     height : 100vh;
@@ -76,33 +75,32 @@ button {
     border : solid 1px black;
     background-color: rgb(45, 45, 45);
     margin : 20px auto ;
+    padding: 15px 0 30px 0;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    gap : 20px; 
+    gap : 35px; 
 }
 
 .image-carte {
     width : 100%;
     min-width : 160px;
     height : 100%;
-    min-height : 240px; 
+    min-height : 260px; 
     margin : 10px auto ;
     object-fit: cover; 
-    border-radius: 8%;
+    object-position : center; 
 }
 
 .card-container {
     position: relative;
     flex-shrink: 0; 
-    min-width : 160px; 
-    min-height : 240px; 
+    /* min-width : 160px;  */
+    min-height : 260px; 
     width : calc(25% - 50px);
-    margin-top : 5px; 
-    margin-bottom : 25px; 
-    margin-right : 30px;
-    perspective : 1000px; 
-    
+    /* margin-top : 5px; 
+    margin-bottom : 10px;  */
+    perspective : 1000px;   
     
 }
 
@@ -111,11 +109,10 @@ button {
     height: 100%;
     width: 100%;
     transition: all 0.3s ease;
-    /* transform-style: preserve-3d; */
-    /* pointer-events: auto; */
+    transform-style: preserve-3d;
 }
 
-.card-container:hover .card:not(.card-win) {
+.card-container:hover .card:not(.card-win, .card-cliquee ) {
     scale : 1.2;
 }
 
@@ -125,7 +122,6 @@ button {
     width: 100%;
     transition: transform .3s ease;
     transform-style: preserve-3d;
-    /* pointer-events: auto; */
 }
 
 .card-cliquee {
@@ -134,11 +130,9 @@ button {
 }
 
 .card-win {
-    /* transform : rotateY(-180deg) scale(1.2); */
-    transform : rotateY(-180deg) scale(0.8);
+    transform : rotateY(-180deg) scale(0.85);
     pointer-events : none;
 }
-
 
 .disabled {
     pointer-events: none !important;
